--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,29 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: appdb
+    ports:
+      - "5432:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
   gin-backend:
     build:
       context: ./backend
     container_name: gin-backend
     ports:
       - "8080:8080"
-    # volumes:
-    #   - ./backend:/app
+    volumes:
+      - ./backend:/main
+    depends_on:
+      - db
+    environment:
+      DB_DSN: host=db user=user password=password dbname=appdb port=5432 sslmode=disable TimeZone=Asia/Tokyo
     restart: always
+
+volumes:
+  db-data:
