--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,19 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.4.4
+
+flutter_native_splash:
+  color: '#000000'
+  image: 'assets/images/iocn_fun.png'
+  color_dark: '#000000'
+  # image_dark: 'assets/images/iocn_fun.png'
+  fullscreen: true
+  android_12:
+    icon_background_color: '#000000'
+    image: 'assets/images/iocn_fun.png'
+    icon_background_color_dark: '#000000'
+    # image_dark: 'assets/images/icon_fun.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
